@@ -1,8 +1,30 @@
+/*
+ * Copyright (c) 2018.
+ *
+ * This file is part of AvaIre.
+ *
+ * AvaIre is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * AvaIre is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with AvaIre.  If not, see <https://www.gnu.org/licenses/>.
+ *
+ *
+ */
+
 package com.avairebot.plugin;
 
 import com.avairebot.exceptions.InvalidPluginException;
 
 import java.io.File;
+import java.lang.reflect.InvocationTargetException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -41,11 +63,13 @@ public class PluginClassLoader extends URLClassLoader {
                 throw new InvalidPluginException("main class `" + loader.getMain() + "' does not extend JavaPlugin", ex);
             }
 
-            this.plugin = ((JavaPlugin) pluginClass.newInstance());
-        } catch (IllegalAccessException ex) {
-            throw new InvalidPluginException("No public constructor", ex);
-        } catch (InstantiationException ex) {
-            throw new InvalidPluginException("Abnormal plugin type", ex);
+            this.plugin = ((JavaPlugin) pluginClass.getConstructor().newInstance());
+        } catch (NoSuchMethodException | IllegalAccessException e) {
+            throw new InvalidPluginException("No public constructor", e);
+        } catch (InstantiationException e) {
+            throw new InvalidPluginException("Abnormal plugin type", e);
+        } catch (InvocationTargetException e) {
+            throw new InvalidPluginException("Failed to invoke the plugin constructor", e);
         }
     }
 
